fix sercurityconfig and remove webconfig(keepgit)