@@ -3,7 +3,6 @@ package com.example.medbook;
 import com.example.medbook.security.jwt.AuthTokenFilter;
 import com.example.medbook.security.services.UserDetailsServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -16,11 +15,12 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.http.HttpMethod;
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableMethodSecurity
@@ -28,9 +28,6 @@ public class SecurityConfig {
 
     @Autowired
     UserDetailsServiceImpl userDetailsService;
-
-    @Value("${app.cors.allowed-origins}")
-    private String allowedOrigins;
 
     @Bean
     public AuthTokenFilter authenticationJwtTokenFilter() {
@@ -55,57 +52,48 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
-    // --- BEAN CẤU HÌNH CORS (QUAN TRỌNG) ---
+    // --- CẤU HÌNH CORS TỐI ƯU ---
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(java.util.List.of("https://medbooking-client-flax.vercel.app", "http://localhost:3000"));
-
-
-        // Cho phép các method quan trọng
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(java.util.List.of(
-            "Authorization", 
-            "Content-Type", 
-            "X-Requested-With", 
-            "Accept", 
-            "Origin", 
-            "Access-Control-Request-Method", 
-            "Access-Control-Request-Headers", 
-            "X-Tunnel-Skip-Anti-Phishing"
+        // Cho phép các domain của bạn
+        configuration.setAllowedOrigins(List.of(
+            "https://medbooking-client-e19voivwz-medbooking.vercel.app", 
+            "https://medbooking-client-flax.vercel.app", 
+            "http://localhost:3000"
         ));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("*")); // Cho phép tất cả headers
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        // Widen CORS filter path mapping to global wildcard to cover all routes
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-    // Audit & fix: Enable OPTIONS preflight requests globally for CORS
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http.csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth -> auth
-    // Mở khóa toàn bộ các đường dẫn có thể bị sai lệch do context-path
-    .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
-    .requestMatchers("/auth/**", "/api/auth/**").permitAll()
-    // Dùng cả hai cách viết để đảm bảo dù có hay không có /api phía trước đều khớp
-    .requestMatchers("/public/**", "/api/public/**").permitAll()
-    .requestMatchers("/services/**", "/api/services/**").permitAll()
-    
-    // Phân quyền chuẩn
-    .requestMatchers("/admin/**", "/api/admin/**").hasAuthority("ROLE_ADMIN")
-    .requestMatchers("/doctor/**", "/api/doctor/**").hasAuthority("ROLE_DOCTOR")
-    .requestMatchers("/staff/**", "/api/staff/**").hasAuthority("ROLE_MEDICAL_STAFF")
-    .requestMatchers("/patient/**", "/api/patient/**").hasAuthority("ROLE_PATIENT")
-    .anyRequest().authenticated()
-);
+        http
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(csrf -> csrf.disable())
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Quan trọng: Cho phép Preflight
+                .requestMatchers("/auth/**", "/api/auth/**").permitAll()
+                .requestMatchers("/public/**", "/api/public/**").permitAll()
+                .requestMatchers("/services/**", "/api/services/**").permitAll()
+                .requestMatchers("/storage/**", "/api/storage/**").permitAll()
+                .requestMatchers("/admin/**", "/api/admin/**").hasAuthority("ROLE_ADMIN")
+                .requestMatchers("/doctor/**", "/api/doctor/**").hasAuthority("ROLE_DOCTOR")
+                .requestMatchers("/staff/**", "/api/staff/**").hasAuthority("ROLE_MEDICAL_STAFF")
+                .requestMatchers("/patient/**", "/api/patient/**").hasAuthority("ROLE_PATIENT")
+                .anyRequest().authenticated()
+            );
 
         http.authenticationProvider(authenticationProvider());
         http.addFilterBefore(authenticationJwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
+        
         return http.build();
     }
 }
